--- a/eureka-demo/eureka-demo-parent/pom.xml
+++ b/eureka-demo/eureka-demo-parent/pom.xml
@@ -38,5 +38,6 @@
     <module>eureka-server-demo</module>
     <module>eureka-client-demo</module>
     <module>eureka-ribbon-client</module>
+    <module>eureka-feign-client</module>
   </modules>
 </project>
