--- a/eureka-demo/eureka-demo-parent/eureka-feign-client/src/main/resources/application.yml
+++ b/eureka-demo/eureka-demo-parent/eureka-feign-client/src/main/resources/application.yml
@@ -7,5 +7,9 @@ eureka:
   client: 
     serverUrl:
       defaultZone: http://localhost:8761/eureka/
+feign:
+  hystrix:
+    enabled: true
+    
 
         
