--- a/eureka-demo/eureka-demo-parent/pom.xml
+++ b/eureka-demo/eureka-demo-parent/pom.xml
@@ -39,5 +39,6 @@
     <module>eureka-client-demo</module>
     <module>eureka-ribbon-client</module>
     <module>eureka-feign-client</module>
+    <module>eureka-zuul-client</module>
   </modules>
 </project>
